Fix sizing and visible :before on category badges

--- a/scss/discourse/badges.scss
+++ b/scss/discourse/badges.scss
@@ -5,13 +5,15 @@
     gap: 0.25rem;
     align-items: center;
     border-radius: 10rem;
-    padding: 0.1rem 0.75rem;
-    background-color: var(--category-badge-color);
-    color: var(--category-badge-text-color);
+    padding: 0.1rem 0.75rem !important;
+    height: 1.2rem;
+    background-color: var(--category-badge-color) !important;
+    color: var(--category-badge-text-color) !important;
 
     &.--has-parent {
       &:before {
         background: none;
+        display: none !important;
       }
     }
   }
@@ -31,6 +33,7 @@
     &.--has-parent {
       &:before {
         background: none;
+        display: none !important;
       }
     }
   }
